Update swagger and api methods
