# api/docs/swagger.yaml
@@ -35,11 +35,6 @@ definitions:
       update_at:
         type: string
     type: object
-  menu.FoodId:
-    properties:
-      id:
-        type: string
-    type: object
   menu.Foods:
     properties:
       foods:
@@ -68,8 +63,6 @@ definitions:
         type: number
       restuarantId:
         type: string
-    type: object
-  menu.Void:
     type: object
   models.Error:
     properties:
@@ -108,15 +101,6 @@ definitions:
       payment_method:
         type: string
       payment_status:
-        type: string
-    type: object
-  resirvation.Filter:
-    properties:
-      arr:
-        items:
-          type: string
-        type: array
-      query:
         type: string
     type: object
   resirvation.Order:
@@ -159,11 +143,6 @@ definitions:
       userId:
         type: string
     type: object
-  resirvation.ReservationId:
-    properties:
-      Id:
-        type: string
-    type: object
   resirvation.ReservationUpdate:
     properties:
       id:
@@ -185,18 +164,19 @@ definitions:
       Status:
         type: boolean
     type: object
-  resirvation.UserId:
+  restaurant.FilterField:
     properties:
-      Id:
+      address:
         type: string
-    type: object
-  restaurant.Filter:
-    properties:
-      arr:
-        items:
-          type: string
-        type: array
-      query:
+      createdAt:
+        type: string
+      description:
+        type: string
+      limit:
+        type: string
+      name:
+        type: string
+      offset:
         type: string
     type: object
   restaurant.GetRes:
@@ -325,18 +305,17 @@ paths:
       summary: Get menu
       tags:
       - menu
-  /menu/deleteFood/:id:
+  /menu/deleteFood/{id}:
     delete:
       consumes:
       - application/json
       description: delete food
       parameters:
-      - description: Delete Food
-        in: body
-        name: request
+      - description: Food ID
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/menu.FoodId'
+        type: string
       produces:
       - application/json
       responses:
@@ -364,13 +343,6 @@ paths:
       consumes:
       - application/json
       description: get all foods
-      parameters:
-      - description: Get Foods
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/menu.Void'
       produces:
       - application/json
       responses:
@@ -393,18 +365,17 @@ paths:
       summary: Get All foods
       tags:
       - menu
-  /menu/getFood/:id:
+  /menu/getFood/{id}:
     get:
       consumes:
       - application/json
       description: get food
       parameters:
-      - description: Get Food
-        in: body
-        name: request
+      - description: Food ID
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/menu.FoodId'
+        type: string
       produces:
       - application/json
       responses:
@@ -561,18 +532,17 @@ paths:
       summary: Yangi rezervatsiyani yaratish
       tags:
       - resirvation
-  /reservation/deleteReservation/:id:
+  /reservation/deleteReservation/{id}:
     delete:
       consumes:
       - application/json
       description: reservation id sini paramdan o'qigan holda uni o'chirmoqda
       parameters:
-      - description: Rezervatsiya so'rovi
-        in: body
-        name: reservation
+      - description: Reservation ID
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/resirvation.ReservationId'
+        type: string
       produces:
       - application/json
       responses:
@@ -591,14 +561,28 @@ paths:
     get:
       consumes:
       - application/json
-      description: istalgan reservatinlarni filterlab olish mumkin
+      description: Istalgan reservatinlarni filterlab olish mumkin
       parameters:
-      - description: Rezervatsiya so'rovi
-        in: body
-        name: reservation
-        required: true
-        schema:
-          $ref: '#/definitions/resirvation.Filter'
+      - description: Status of the reservations
+        in: query
+        name: status
+        type: string
+      - description: Creation date of the reservations
+        in: query
+        name: createdAt
+        type: string
+      - description: Last update date of the reservations
+        in: query
+        name: updatedAt
+        type: string
+      - description: Limit the number of results
+        in: query
+        name: limit
+        type: integer
+      - description: Offset for pagination
+        in: query
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
@@ -610,21 +594,20 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/models.Error'
-      summary: barcha reservationlarni olish
+      summary: Barcha reservationlarni olish
       tags:
-      - resirvation
-  /reservation/getReservation/:id:
+      - reservation
+  /reservation/getReservation/{id}:
     get:
       consumes:
       - application/json
       description: Id bilan reservation olinyapti
       parameters:
-      - description: Rezervatsiya so'rovi
-        in: body
-        name: reservation
+      - description: Reservation ID
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/resirvation.ReservationId'
+        type: string
       produces:
       - application/json
       responses:
@@ -639,18 +622,17 @@ paths:
       summary: reservation olish
       tags:
       - resirvation
-  /reservation/getUserReservation/:id:
+  /reservation/getUserReservation/{id}:
     get:
       consumes:
       - application/json
       description: user id sini paramdan o'qigan holda uning reservationi olinmoqda
       parameters:
-      - description: Rezervatsiya so'rovi
-        in: body
-        name: reservation
+      - description: User ID
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/resirvation.UserId'
+        type: string
       produces:
       - application/json
       responses:
@@ -806,7 +788,7 @@ paths:
         name: restaurant
         required: true
         schema:
-          $ref: '#/definitions/restaurant.Filter'
+          $ref: '#/definitions/restaurant.FilterField'
       produces:
       - application/json
       responses:
